[gd_scene load_steps=7 format=3 uid="uid://dw5ycbn8o5hkx"]

[ext_resource type="Script" path="res://scripts/global_managers/game_manager/game_manager.gd" id="1_ppg5x"]
[ext_resource type="Script" path="res://addons/godot_state_charts/state_chart.gd" id="2_pk4u2"]
[ext_resource type="Script" path="res://addons/godot_state_charts/parallel_state.gd" id="3_l7is6"]
[ext_resource type="Script" path="res://addons/godot_state_charts/compound_state.gd" id="4_0h50r"]
[ext_resource type="Script" path="res://addons/godot_state_charts/atomic_state.gd" id="5_ccmlr"]
[ext_resource type="Script" path="res://addons/godot_state_charts/transition.gd" id="6_fdm88"]

[node name="GameManager" type="Node" node_paths=PackedStringArray("state_chart", "current_state", "playing", "paused")]
process_mode = 3
script = ExtResource("1_ppg5x")
state_chart = NodePath("StateChart")
current_state = NodePath("StateChart/ParallelState/GameState")
playing = NodePath("StateChart/ParallelState/GameState/Playing")
paused = NodePath("StateChart/ParallelState/GameState/Pause")

[node name="StateChart" type="Node" parent="."]
script = ExtResource("2_pk4u2")

[node name="ParallelState" type="Node" parent="StateChart"]
script = ExtResource("3_l7is6")

[node name="GameState" type="Node" parent="StateChart/ParallelState"]
script = ExtResource("4_0h50r")
initial_state = NodePath("Playing")

[node name="Menu" type="Node" parent="StateChart/ParallelState/GameState"]
script = ExtResource("5_ccmlr")

[node name="OnPlaying" type="Node" parent="StateChart/ParallelState/GameState/Menu"]
script = ExtResource("6_fdm88")
to = NodePath("../../Playing")
event = &"play"

[node name="Playing" type="Node" parent="StateChart/ParallelState/GameState"]
script = ExtResource("5_ccmlr")

[node name="OnPause" type="Node" parent="StateChart/ParallelState/GameState/Playing"]
script = ExtResource("6_fdm88")
to = NodePath("../../Pause")
event = &"pause"

[node name="OnMenu" type="Node" parent="StateChart/ParallelState/GameState/Playing"]
script = ExtResource("6_fdm88")
to = NodePath("../../Menu")
event = &"menu"

[node name="Pause" type="Node" parent="StateChart/ParallelState/GameState"]
script = ExtResource("5_ccmlr")

[node name="OnPlayed" type="Node" parent="StateChart/ParallelState/GameState/Pause"]
script = ExtResource("6_fdm88")
to = NodePath("../../Playing")
event = &"play"

[node name="OnMenu" type="Node" parent="StateChart/ParallelState/GameState/Pause"]
script = ExtResource("6_fdm88")
to = NodePath("../../Menu")
event = &"menu"

[connection signal="state_entered" from="StateChart/ParallelState/GameState/Menu" to="." method="_on_menu_state_entered"]
[connection signal="state_entered" from="StateChart/ParallelState/GameState/Playing" to="." method="_on_playing_state_entered"]
[connection signal="state_entered" from="StateChart/ParallelState/GameState/Pause" to="." method="_on_pause_state_entered"]
